--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="forgot-password">
                     <a href="#">Forgot Password?</a>
                 </div>
-                <button type="submit" class="login-btn"><p>Login</p></button>
+                <button type="submit" class="login-btn" onclick="redirectToInterface()"><p>Login</p></button>
 
                 <div class="or-divider">
                     <hr> <p>or</p> <hr>
@@ -42,5 +42,6 @@
             <img src="images/login-page-graphic.png" alt="Rock Paper Scissors Graphic" class="img">
         </div>
     </div>
+    <script src="js/app.js"></script>
 </body>
 </html>
