Add comments for login and graphic sections in index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="container">
+        <!-- Login Section -->
         <div class="login-section">
             <div class="welcome">
                 <h2>Welcome to <br>Rock Paper Scissors Game</h2>
@@ -37,7 +38,7 @@
                 </div>
             </form>
         </div>
-
+        <!-- Graphic Section -->
         <div class="graphic-section">
             <img src="images/login-page-graphic.png" alt="Rock Paper Scissors Graphic" class="img">
         </div>
