Add create account page and update link in index.html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <button type="button" class="google-btn"><i class="fa-brands fa-google"> </i>  Sign in with Google</button>
                 
                 <div class="create-account">
-                    <a href="#">
+                    <a href="create_acc.html">
                         <p>Create a new account</p>
                     </a>
                 </div>
