Refactor login form to use email field and update validation logic

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             </div>
             
             <form class="form" onsubmit="return validateLogin()">
-                <label for="email">Username or Email:</label>
-                <input type="text" id="username" placeholder="email@gmail.com" class="email">
+                <label for="email">Email:</label>
+                <input type="text" id="email" placeholder="email@gmail.com" class="email">
                 <label for="password">Password:</label>
                 <input type="password" id="password" placeholder="*******">
                 <div class="forgot-password">
