--- a/interface.html
+++ b/interface.html
@@ -15,7 +15,7 @@
             <img src="images/icon.png" alt="Rock Paper Scissor Logo">
         </div>
         <button>PLAY WITH OTHER</button>
-        <button>PLAY WITH COMPUTER</button>
+        <button> <a href="vs_comp.html">PLAY WITH COMPUTER</a></button>
 
         <a href="#">See instruction?</a>
     </div>
